src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-ofT-dwF1000-dhF500-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-maximized true\n    open-floating true\n    default-column-width { fixed 1000; }\n    default-window-height { fixed 500; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1000 × 500, bounds: 1272 × 712, states: []

post-map configures:
size: 1000 × 500, bounds: 1272 × 712, states: []
size: 1000 × 500, bounds: 1272 × 712, states: [Activated]
